fixed overlapping div issue

--- a/static/css/app.less
+++ b/static/css/app.less
@@ -657,13 +657,15 @@ li:hover .sidebar-primary-item-action {
 
 // Arrow stuff
 #hero .down {
-    text-align: center;
-    position: absolute;
-    top: auto;
-    right: auto;
-    bottom: 85px;
-    left: 15px;
-    width: 100%;
+  text-align: center;
+  position: absolute;
+  top: auto;
+  bottom: 85px;
+  width: 200px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 1440px) {
